# libbackbone-cpp

./: .gitignore  Makefile.am  README.md  configure.ac
backbone++/: Makefile.am  collection.hpp  collection.inl  json.hpp  json.inl  json_fwd.hpp  map.hpp  map.inl  model.hpp  model.inl  proxy.hpp
backbone++/detail/: observable.hpp  observable.inl  signals.hpp
backbone++/detail/collection/: signals.hpp
backbone++/detail/json/: writer.hpp
backbone++/detail/map/: signals.hpp
backbone++/detail/model/: signals.hpp
backbone++/detail/proxy/jitfetch/: collection.hpp  map.hpp  model.hpp
backbone++/detail/proxy/prefetch/: collection.hpp  map.hpp  model.hpp
backbone++/detail/support/: fusion.hpp
backbone++/detail/support/fusion/: for_each_struct.hpp
backbone++/proxy/: jitfetch.hpp  jitfetch_fwd.hpp  prefetch.hpp  prefetch_fwd.hpp
backbone++/proxy/fetch/: prefetch.hpp
doc/: Jamroot  build.sh  getting_started.qbk  libbackbone-cpp.qbk  quickref.xml  reference.dox  reference.qbk  reference.tags  reference.xsl  revision_history.qbk  tutorial.qbk
doc/html/: index.html  standalone_HTML.manifest
doc/html/libbackbone_cpp/: getting_started.html  reference.html  revision_history.html  tutorial.html
doc/html/libbackbone_cpp/reference/: collection.html  json_writer.html  (+8 more)
doc/tutorial/: custom_signals.qbk  jitfetching.qbk  json_conversion.qbk  prefetching.qbk  signal_subscriptions.qbk  your_first_collection.qbk  your_first_map.qbk  your_first_model.qbk
test/: Makefile.am  basic.cpp  basic1.cpp  collection.cpp  events.cpp  json.cpp  map_.cpp  nested.cpp  proxy.cpp
(+66 files in other folders)
